syntax = "proto3";

package grpc;
option go_package="grpc/pb";

message UserScore {
  string name = 1;
  int64 points = 2;
}

message PlayerScoreRequest {
  UserScore score = 1;
}

message PlayerScoreResponse {
  int64 rank = 1;
}

message LeaderboardRequest {
  int64 page_size = 2;
  int64 page = 3;
  int64 period = 4;
}

message LeaderboardScore {
  UserScore score = 1;
  int64 rank = 2;
}

message LeaderboardResponse {
  repeated LeaderboardScore score = 1;
}

service Scoreboard{
    rpc StoreScore(stream PlayerScoreRequest) returns(stream PlayerScoreResponse) {};
    rpc GetLeaderboard(LeaderboardRequest) returns(LeaderboardResponse) {};
}