
syntax = "proto3";
import "google/protobuf/empty.proto";

package proto;
option go_package="proto";

message PlayerScoreRequest {
  string name = 1;
  int64 points = 2;
}

message PlayerScoreResponse {
  int64 rank = 1;
}

message LeaderboardRequest {
  string name = 1;
  int64 page_size = 2;
  int64 page = 3;
  bool monthly = 4;
}

message LeaderboardScore {
  string name = 1;
  int64 points = 2;
  int64 position = 3;
}

message LeaderboardResponse {
  int64 next_page = 1;
  repeated LeaderboardScore score = 2;
  repeated LeaderboardScore around_me = 3;
}

service Scoreboard{
    rpc StoreScore(stream PlayerScoreRequest) returns(stream PlayerScoreResponse) {};
    rpc GetLeaderboard(LeaderboardRequest) returns(LeaderboardResponse) {};

    rpc Seed(google.protobuf.Empty) returns(google.protobuf.Empty) {};
}